--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.css
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.css
@@ -19,6 +19,10 @@
   font-size: 14px !important;
 }
 
-.shadow-sm{
+.shadow-sm {
   box-shadow: 0 0.125rem 0.125rem -0.125rem #a8a8a8, 0 0.25rem 0.75rem #a8a8a8 !important
+}
+
+#canceledOrders > .blockquote::before {
+  color: #fd5631;
 }
