--- a/Frontend/src/app/app-shop/view/business-account/business-account.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/business-account.component.html
@@ -130,13 +130,13 @@
                 {{getUser().businessProfile.countPendingOrders}}
               </span>
             </a>
-            <a
-              class="card-nav-link"
-              [routerLinkActive]="'active'"
-              [routerLink]="'/shop/header/business_account/ba_order_history'"
-              (click)="breadCrumbTxt='Order History'"
-            ><i class="fi-clock opacity-60 me-2"></i>Order History</a
-            >
+            <!--<a-->
+              <!--class="card-nav-link"-->
+              <!--[routerLinkActive]="'active'"-->
+              <!--[routerLink]="'/shop/header/business_account/ba_order_history'"-->
+              <!--(click)="breadCrumbTxt='Order History'"-->
+            <!--&gt;<i class="fi-clock opacity-60 me-2"></i>Order History</a-->
+            <!--&gt;-->
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
