--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -71,9 +71,9 @@
                 <!--{{getUser().customerProfile.countPendingOrders}}-->
               <!--</span>-->
             </a>
-            <a class="card-nav-link" href="./client-account-order-history.html"
-            ><i class="fi-clock opacity-60 me-2"></i>Order History</a
-            >
+            <!--<a class="card-nav-link" href="./client-account-order-history.html"-->
+            <!--&gt;<i class="fi-clock opacity-60 me-2"></i>Order History</a-->
+            <!--&gt;-->
             <a
               class="card-nav-link"
               [routerLinkActive]="'active'"
