--- a/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-profile/ba-profile.component.html
@@ -37,6 +37,7 @@
               #imageInput
               [options]="pondOptions"
               name="imageInput"
+              multiple="false"
               (onaddfile)="pondHandleAddFile($event)"
               (onremovefile)="pondHandlerRemoveFile($event)">
             </file-pond>
