--- a/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
+++ b/Frontend/src/app/app-customer/view/item-shop-search/item-shop-search.component.html
@@ -122,3 +122,5 @@
 ><span class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span
 ><i class="btn-scroll-top-icon fi-chevron-up"> </i
 ></a>
+
+<app-shop-cart></app-shop-cart>
