--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
@@ -20,10 +20,11 @@
           </mdb-carousel-item>
         </mdb-carousel>
       </div>
-      <div class="position-relative" (click)="getItemSelected(item)" style="margin: 15px 15px 0px 15px">
+      <div class="position-relative" style="margin: 15px 15px 0px 15px">
         <h3 class="h6 fs-base" style="margin-bottom: 0px">
-          <a class="nav-link" href="#" data-bs-toggle="offcanvas"
-             data-bs-target="#fi-item-viewer" style="font-weight: bold;padding: 0px">{{item.name}}</a>
+          <a class="nav-link" data-bs-toggle="offcanvas"
+             (click)="getItemSelected(item)"
+             data-bs-target="#item-viewer-g" style="font-weight: bold;padding: 0px">{{item.name}}</a>
         </h3>
         <div class="border-top border-light pt-0 mb-2">
 
